# Rag_system

txt/: .env  pyproject.toml
txt/src/txt/: __init__.py  ap.py  csv.py  excel.py  json.py  json_output.md  pdf.py  specs.py  spreadsheet.xlsx  txt1.py
txt/src/txt/knowledge/: doc.json  document-csv.csv  spreadsheet.xlsx
